{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 2306,
  "lineage": "da38365c-f369-4f7e-dbd3-e84f3939d961",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-099524f6cc4217953",
            "public_dns": "ec2-34-199-253-226.compute-1.amazonaws.com",
            "public_ip": "34.199.253.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-NAT-ONE",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_two",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a4f4cc9bd7af2a59",
            "public_dns": "ec2-3-136-136-116.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.136.116",
            "public_ipv4_pool": "amazon",
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-NAT-TWO",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_one_controller",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.11",
            "association_id": "eipassoc-0299bc0a089bc3053",
            "domain": "vpc",
            "id": "eipalloc-0a849266d5050d1b3",
            "instance": "i-073b8fa105f649297",
            "network_interface": "eni-0f52551ca66530c2f",
            "private_dns": "ip-10-0-1-11.ec2.internal",
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-54-174-240-142.compute-1.amazonaws.com",
            "public_ip": "54.174.240.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-CONTROLLER-ONE",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.vpc_one_controller",
            "aws_subnet.vpc_one_controller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_two_controller",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.1.1.11",
            "association_id": "eipassoc-066a11f197c4daf23",
            "domain": "vpc",
            "id": "eipalloc-0f421afb93d408a77",
            "instance": "i-0fef371a1ab3acc19",
            "network_interface": "eni-010837d1ba84d09b9",
            "private_dns": "ip-10-1-1-11.us-east-2.compute.internal",
            "private_ip": "10.1.1.11",
            "public_dns": "ec2-3-136-55-219.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.55.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-CONTROLLER-TWO",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.vpc_two_controller",
            "aws_subnet.vpc_two_controller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc_one_controller",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a208c7cdba991ea",
            "arn": "arn:aws:ec2:us-east-1:086341552770:instance/i-073b8fa105f649297",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "dlos-wrokers-ec2",
            "id": "i-073b8fa105f649297",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "dlos-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f52551ca66530c2f",
            "private_dns": "ip-10-0-1-11.ec2.internal",
            "private_ip": "10.0.1.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 150,
                "volume_id": "vol-095115b15af028005",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a71c5e9267b50077"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d41454fa8e220c7",
            "tags": {
              "BusinessUnit": "dlos",
              "Cloud": "AWS",
              "Component": "controller",
              "Name": "dlos-development-controller",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure",
              "TerminateOn": "2019-11-27 20:58:04 UTC"
            },
            "tenancy": "default",
            "volume_tags": {
              "BusinessUnit": "dlos",
              "Cloud": "AWS",
              "Component": "Controller",
              "Name": "dlos-development-Controller",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc_security_group_ids": [
              "sg-0a71c5e9267b50077"
            ]
          },
          "depends_on": [
            "aws_key_pair.vpc_one_deployer",
            "aws_security_group.vpc_one_controller",
            "aws_subnet.vpc_one_controller",
            "data.aws_ami.ubuntu_vpc_one",
            "google_compute_forwarding_rule.fr_esp",
            "google_compute_forwarding_rule.fr_udp4500",
            "google_compute_forwarding_rule.fr_udp500",
            "google_dns_record_set.gcp_etcd",
            "google_dns_record_set.gcp_kubeapi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc_two_controller",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059d836af932792c3",
            "arn": "arn:aws:ec2:us-east-2:086341552770:instance/i-0fef371a1ab3acc19",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "dlos-wrokers-ec2",
            "id": "i-0fef371a1ab3acc19",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "dlos-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-010837d1ba84d09b9",
            "private_dns": "ip-10-1-1-11.us-east-2.compute.internal",
            "private_ip": "10.1.1.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 150,
                "volume_id": "vol-0f23da5d58bf2df31",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-080d4aa9674caf236"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ab6db08e2384e5c",
            "tags": {
              "BusinessUnit": "dlos",
              "Cloud": "AWS",
              "Component": "controller",
              "Name": "dlos-development-controller",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "tenancy": "default",
            "volume_tags": {
              "BusinessUnit": "dlos",
              "Cloud": "AWS",
              "Component": "Controller",
              "Name": "dlos-development-Controller",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc_security_group_ids": [
              "sg-080d4aa9674caf236"
            ]
          },
          "depends_on": [
            "aws_key_pair.vpc_two_deployer",
            "aws_security_group.vpc_two_controller",
            "aws_subnet.vpc_two_controller",
            "data.aws_ami.ubuntu_vpc_two",
            "google_compute_forwarding_rule.fr_esp",
            "google_compute_forwarding_rule.fr_udp4500",
            "google_compute_forwarding_rule.fr_udp500",
            "google_dns_record_set.gcp_etcd",
            "google_dns_record_set.gcp_kubeapi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0dd6557a459e90c1d",
            "owner_id": "086341552770",
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-one",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc_id": "vpc-078b2d0cce8853116"
          },
          "depends_on": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_two",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06580e8436f95f303",
            "owner_id": "086341552770",
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-two",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc_id": "vpc-0d202c7175dfa3abc"
          },
          "depends_on": [
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc_one_natGateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099524f6cc4217953",
            "id": "nat-0397253e1f44c0325",
            "network_interface_id": "eni-009de3a86c20a7f17",
            "private_ip": "10.0.1.124",
            "public_ip": "34.199.253.226",
            "subnet_id": "subnet-08d41454fa8e220c7",
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-NATGATEWAY-VPC-ONE",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            }
          },
          "depends_on": [
            "aws_eip.nat_one",
            "aws_subnet.vpc_one_controller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc_two_natGateway",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4f4cc9bd7af2a59",
            "id": "nat-0897abc49e82e873a",
            "network_interface_id": "eni-0d570eaa3bef1481a",
            "private_ip": "10.1.1.91",
            "public_ip": "3.136.136.116",
            "subnet_id": "subnet-04ab6db08e2384e5c",
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-NATGATEWAY-VPC-TWO",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            }
          },
          "depends_on": [
            "aws_eip.nat_two",
            "aws_subnet.vpc_two_controller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_one_controller_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0451cfe7e0a358ceb3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0451cfe7e0a358ceb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-0f05ed6c281b6b567"
          },
          "depends_on": [
            "aws_route_table.vpc_one_controller_route",
            "aws_vpc_peering_connection.DLOS-VPC-ONE",
            "aws_vpc_peering_connection_accepter.DLOS-VPC-TWO"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_one_worker_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06bd8967d46a599b73322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06bd8967d46a599b7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-0f05ed6c281b6b567"
          },
          "depends_on": [
            "aws_route_table.vpc_one_worker_route",
            "aws_vpc_peering_connection.DLOS-VPC-ONE",
            "aws_vpc_peering_connection_accepter.DLOS-VPC-TWO"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_two_controller_route",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bf6742553b0e1bad179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf6742553b0e1bad",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-0f05ed6c281b6b567"
          },
          "depends_on": [
            "aws_route_table.vpc_two_controller_route",
            "aws_vpc_peering_connection.DLOS-VPC-ONE",
            "aws_vpc_peering_connection_accepter.DLOS-VPC-TWO"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_two_worker_route",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0072f8fff8694eebf179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0072f8fff8694eebf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-0f05ed6c281b6b567"
          },
          "depends_on": [
            "aws_route_table.vpc_two_worker_route",
            "aws_vpc_peering_connection.DLOS-VPC-ONE",
            "aws_vpc_peering_connection_accepter.DLOS-VPC-TWO"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_one_controller_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0451cfe7e0a358ceb",
            "owner_id": "086341552770",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd6557a459e90c1d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-VPC-ONE-CONTROLLER-ROUTE",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc_id": "vpc-078b2d0cce8853116"
          },
          "depends_on": [
            "aws_internet_gateway.gw_one",
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_one_worker_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06bd8967d46a599b7",
            "owner_id": "086341552770",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0397253e1f44c0325",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-VPC-ONE-WORKER-ROUTE",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc_id": "vpc-078b2d0cce8853116"
          },
          "depends_on": [
            "aws_nat_gateway.vpc_one_natGateway",
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_two_controller_route",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bf6742553b0e1bad",
            "owner_id": "086341552770",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06580e8436f95f303",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-VPC-TWO-CONTROLLER-ROUTE",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc_id": "vpc-0d202c7175dfa3abc"
          },
          "depends_on": [
            "aws_internet_gateway.gw_two",
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_two_worker_route",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0072f8fff8694eebf",
            "owner_id": "086341552770",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0897abc49e82e873a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-VPC-TWO-WORKER-ROUTE",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc_id": "vpc-0d202c7175dfa3abc"
          },
          "depends_on": [
            "aws_nat_gateway.vpc_two_natGateway",
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_one_controller_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b190c8da1ebbfbbb",
            "route_table_id": "rtb-0451cfe7e0a358ceb",
            "subnet_id": "subnet-08d41454fa8e220c7"
          },
          "depends_on": [
            "aws_route_table.vpc_one_controller_route",
            "aws_subnet.vpc_one_controller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_one_worker_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07804e9265770b668",
            "route_table_id": "rtb-06bd8967d46a599b7",
            "subnet_id": "subnet-06d2576a216c638bb"
          },
          "depends_on": [
            "aws_route_table.vpc_one_worker_route",
            "aws_subnet.vpc_one_worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_two_controller_association",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9a0f7781423772a",
            "route_table_id": "rtb-0bf6742553b0e1bad",
            "subnet_id": "subnet-04ab6db08e2384e5c"
          },
          "depends_on": [
            "aws_route_table.vpc_two_controller_route",
            "aws_subnet.vpc_two_controller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_two_worker_association",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fff764bc664f639b",
            "route_table_id": "rtb-0072f8fff8694eebf",
            "subnet_id": "subnet-02b95827373b0f676"
          },
          "depends_on": [
            "aws_route_table.vpc_two_worker_route",
            "aws_subnet.vpc_two_worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_one_controller",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086341552770:security-group/sg-0a71c5e9267b50077",
            "description": "Security Group For Controller",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a71c5e9267b50077",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "to allow inbound https traffic",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "to allow the network traffic internally",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.1.2.0/24",
                  "10.1.1.0/24"
                ],
                "description": "to allow the network traffic from Controller and Worker Groups",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "VPC-ONE-CONTROLLER",
            "name_prefix": null,
            "owner_id": "086341552770",
            "revoke_rules_on_delete": false,
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-VPC-ONE-CONTROLLER",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-078b2d0cce8853116"
          },
          "depends_on": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_one_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086341552770:security-group/sg-05159043c9514a2c8",
            "description": "Security Group For Worker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05159043c9514a2c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.1.1.0/24",
                  "10.1.2.0/24"
                ],
                "description": "to allow the network traffic from Controller and Worker",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "to allow the network traffic internally",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "VPC-ONE-WORKER",
            "name_prefix": null,
            "owner_id": "086341552770",
            "revoke_rules_on_delete": false,
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-VPC-ONE-WORKER",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-078b2d0cce8853116"
          },
          "depends_on": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_two_controller",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:086341552770:security-group/sg-080d4aa9674caf236",
            "description": "Security Group For Controller",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080d4aa9674caf236",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "to allow the inbound HTTPS traffic",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.1.1.0/24"
                ],
                "description": "to allow the network traffic internally",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.1.2.0/24",
                  "10.0.2.0/24",
                  "10.0.1.0/24"
                ],
                "description": "to allow the network traffic from Controller and Worker",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "VPC-TWO-CONTROLLER",
            "name_prefix": null,
            "owner_id": "086341552770",
            "revoke_rules_on_delete": false,
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-VPC-TWO-CONTROLLER",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d202c7175dfa3abc"
          },
          "depends_on": [
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_two_worker",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:086341552770:security-group/sg-01715833110452a29",
            "description": "Security Group For Worker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01715833110452a29",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.1.0/24",
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "to allow the network traffic from Controller and Worker",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.1.2.0/24"
                ],
                "description": "to allow the network traffic internally",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "VPC-TWO-WORKER",
            "name_prefix": null,
            "owner_id": "086341552770",
            "revoke_rules_on_delete": false,
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-VPC-TWO-WORKER",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d202c7175dfa3abc"
          },
          "depends_on": [
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_one_controller",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086341552770:subnet/subnet-08d41454fa8e220c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08d41454fa8e220c7",
            "map_public_ip_on_launch": false,
            "owner_id": "086341552770",
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-VPC-ONE-CONTROLLER",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc_id": "vpc-078b2d0cce8853116"
          },
          "depends_on": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_one_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086341552770:subnet/subnet-06d2576a216c638bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06d2576a216c638bb",
            "map_public_ip_on_launch": false,
            "owner_id": "086341552770",
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-VPC-ONE-WORKER",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc_id": "vpc-078b2d0cce8853116"
          },
          "depends_on": [
            "aws_vpc.vpc_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_two_controller",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:086341552770:subnet/subnet-04ab6db08e2384e5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-04ab6db08e2384e5c",
            "map_public_ip_on_launch": false,
            "owner_id": "086341552770",
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-VPC-TWO-CONTROLLER",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc_id": "vpc-0d202c7175dfa3abc"
          },
          "depends_on": [
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_two_worker",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:086341552770:subnet/subnet-02b95827373b0f676",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-02b95827373b0f676",
            "map_public_ip_on_launch": false,
            "owner_id": "086341552770",
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-VPC-TWO-WORKER",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc_id": "vpc-0d202c7175dfa3abc"
          },
          "depends_on": [
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086341552770:vpc/vpc-078b2d0cce8853116",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a6f6cca94223d1d",
            "default_route_table_id": "rtb-0f59fb663e6cfd5be",
            "default_security_group_id": "sg-0f8721b2bb054c0e0",
            "dhcp_options_id": "dopt-34c8db56",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-078b2d0cce8853116",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f59fb663e6cfd5be",
            "owner_id": "086341552770",
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-vpc_one",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_two",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:086341552770:vpc/vpc-0d202c7175dfa3abc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-05ac1c1ffb16d6fab",
            "default_route_table_id": "rtb-0643783948fb9e080",
            "default_security_group_id": "sg-0c6cb3b1878ce02be",
            "dhcp_options_id": "dopt-caf11fa3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d202c7175dfa3abc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0643783948fb9e080",
            "owner_id": "086341552770",
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "DLOS-vpc_two",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "DLOS-VPC-ONE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "auto_accept": false,
            "id": "pcx-0f05ed6c281b6b567",
            "peer_owner_id": "086341552770",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0d202c7175dfa3abc",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "VPC Peering between VPC-ONE and VPC-TWO",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc_id": "vpc-078b2d0cce8853116"
          },
          "depends_on": [
            "aws_vpc.vpc_one",
            "aws_vpc.vpc_two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "DLOS-VPC-TWO",
      "provider": "provider.aws.ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0f05ed6c281b6b567",
            "peer_owner_id": "086341552770",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0d202c7175dfa3abc",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "BusinessUnit": "dlos",
              "Name": "VPC Peering between VPC-ONE and VPC-TWO",
              "Owner": "chitender_kumar",
              "Project": "dlos",
              "TechnologyUnit": "infrastructure"
            },
            "vpc_id": "vpc-078b2d0cce8853116",
            "vpc_peering_connection_id": "pcx-0f05ed6c281b6b567"
          },
          "depends_on": [
            "aws_vpc_peering_connection.DLOS-VPC-ONE"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "gcp-vpn-ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.196.110.42",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-11-27T10:56:48.232-08:00",
            "id": "projects/multicloud-kubernetes/regions/us-east1/addresses/gcp-vpn-ip",
            "name": "gcp-vpn-ip",
            "network_tier": "PREMIUM",
            "project": "multicloud-kubernetes",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/addresses/gcp-vpn-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_controller",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.196.70.28",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-11-27T10:56:48.299-08:00",
            "id": "projects/multicloud-kubernetes/regions/us-east1/addresses/controller-public",
            "name": "controller-public",
            "network_tier": "PREMIUM",
            "project": "multicloud-kubernetes",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/addresses/controller-public"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-bastion",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-27T10:57:06.069-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/multicloud-kubernetes/global/firewalls/dlos-fw-allow-bastion",
            "name": "dlos-fw-allow-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
            "priority": 1000,
            "project": "multicloud-kubernetes",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/firewalls/dlos-fw-allow-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc_three"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-27T10:57:08.393-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/multicloud-kubernetes/global/firewalls/dlos-fw-allow-http",
            "name": "dlos-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
            "priority": 1000,
            "project": "multicloud-kubernetes",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/firewalls/dlos-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "controller"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc_three"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-11-27T10:57:05.879-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/multicloud-kubernetes/global/firewalls/dlos-fw-allow-internal",
            "name": "dlos-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
            "priority": 1000,
            "project": "multicloud-kubernetes",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/firewalls/dlos-fw-allow-internal",
            "source_ranges": [
              "10.2.1.0/24",
              "10.2.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc_three"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr_esp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "creation_timestamp": "2019-11-27T10:57:17.701-08:00",
            "id": "projects/multicloud-kubernetes/regions/us-east1/forwardingRules/fr-esp",
            "ip_address": "35.196.110.42",
            "ip_protocol": "ESP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-esp",
            "network_tier": "PREMIUM",
            "project": "multicloud-kubernetes",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/forwardingRules/fr-esp",
            "target": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/targetVpnGateways/gcp-vpn-gw-us-east1"
          },
          "depends_on": [
            "google_compute_address.gcp-vpn-ip",
            "google_compute_vpn_gateway.gcp-vpn-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr_udp4500",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "creation_timestamp": "2019-11-27T10:57:21.150-08:00",
            "id": "projects/multicloud-kubernetes/regions/us-east1/forwardingRules/fr-udp4500",
            "ip_address": "35.196.110.42",
            "ip_protocol": "UDP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-udp4500",
            "network_tier": "PREMIUM",
            "port_range": "4500-4500",
            "project": "multicloud-kubernetes",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/forwardingRules/fr-udp4500",
            "target": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/targetVpnGateways/gcp-vpn-gw-us-east1"
          },
          "depends_on": [
            "google_compute_address.gcp-vpn-ip",
            "google_compute_vpn_gateway.gcp-vpn-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr_udp500",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "creation_timestamp": "2019-11-27T10:57:17.890-08:00",
            "id": "projects/multicloud-kubernetes/regions/us-east1/forwardingRules/fr-udp500",
            "ip_address": "35.196.110.42",
            "ip_protocol": "UDP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-udp500",
            "network_tier": "PREMIUM",
            "port_range": "500-500",
            "project": "multicloud-kubernetes",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/forwardingRules/fr-udp500",
            "target": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/targetVpnGateways/gcp-vpn-gw-us-east1"
          },
          "depends_on": [
            "google_compute_address.gcp-vpn-ip",
            "google_compute_vpn_gateway.gcp-vpn-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "controller_instance",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20190403",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/zones/us-east1-b/disks/dlos-controller"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/multicloud-kubernetes/zones/us-east1-b/instances/dlos-controller",
            "instance_id": "8804026868391180741",
            "label_fingerprint": "q9gzQtZ16FA=",
            "labels": {
              "businessunit": "dlos",
              "cloud": "gcp",
              "component": "controller",
              "name": "dlos-development-controller",
              "owner": "chitender_kumar",
              "project": "dlos",
              "technologyunit": "infrastructure"
            },
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "dlos:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDRPjE9xyM6rMakE16M5qRpl/cVJ2q+H453v4fC1oYDSxRumDerYTkNpedYI+qdLr+hIHv92CPtBDW84z7rF8ctGg7vKdWxk2AYxLFTtmS7r5oO2WE7Tx4ZGa8rVjzm94Jsxeblcz4v/9GDWX935mLXHyhgKr6SS8Nq/D+tgzoY8ta2Q/ZXpzLEM+uw23uPkJ+v1X8+ZyGX9oha9A8XM1vSLNmHD+A+jM0wiFyPS3MR1CWistJM6wJJo/EqigDran8P4y6KK19NP9YlRiK2pY/C5RmD4Q9pA/hZ6E+CcM1S2+o01QCmTzLtsQw7sspS0HgVJCyVp164A3psFPvjzf2f delhivery@DV-LT-N-017992.local\n"
            },
            "metadata_fingerprint": "0yjpH9LaYgY=",
            "metadata_startup_script": "#!/bin/bash\n\nsudo rm -f /var/log/user-data.log\nsudo touch /var/log/user-data.log\nsudo chown ubuntu:ubuntu /var/log/user-data.log\nexec \u003e \u003e(tee /var/log/user-data.log|logger -t user-data -s 2\u003e/dev/null) 2\u003e\u00261\n\necho BEGIN\ndate '+%Y-%m-%d %H:%M:%S'\n\nsudo apt-get update\nsudo apt-get -y install socat conntrack ipset golang-cfssl awscli\n\n### Disabling IPV6\nsudo sysctl -w net.ipv6.conf.all.disable_ipv6=1\nsudo sysctl -w net.ip [...]
            "name": "dlos-controller",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.196.70.28",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
                "network_ip": "10.2.1.11",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/subnetworks/dlos-development-controller",
                "subnetwork_project": "multicloud-kubernetes"
              }
            ],
            "project": "multicloud-kubernetes",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/zones/us-east1-b/instances/dlos-controller",
            "tags": [
              "controller",
              "ssh"
            ],
            "tags_fingerprint": "mgRAEDvxWLc=",
            "zone": "us-east1-b"
          },
          "depends_on": [
            "google_compute_address.static_controller",
            "google_compute_forwarding_rule.fr_esp",
            "google_compute_forwarding_rule.fr_udp4500",
            "google_compute_forwarding_rule.fr_udp500",
            "google_compute_subnetwork.controller",
            "google_dns_record_set.gcp_etcd",
            "google_dns_record_set.gcp_kubeapi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_three",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
            "name": "dlos-development-vpc",
            "project": "multicloud-kubernetes",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "gcp-router1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 65000
              }
            ],
            "creation_timestamp": "2019-11-27T10:57:21.776-08:00",
            "id": "projects/multicloud-kubernetes/regions/us-east1/routers/gcp-router1",
            "name": "gcp-router1",
            "network": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
            "project": "multicloud-kubernetes",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/routers/gcp-router1"
          },
          "depends_on": [
            "aws_customer_gateway.aws-cgw-vpc-two",
            "google_compute_network.vpc_three"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "gcp-router2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 65000
              }
            ],
            "creation_timestamp": "2019-11-27T10:57:08.744-08:00",
            "id": "projects/multicloud-kubernetes/regions/us-east1/routers/gcp-router2",
            "name": "gcp-router2",
            "network": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
            "project": "multicloud-kubernetes",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/routers/gcp-router2"
          },
          "depends_on": [
            "aws_customer_gateway.aws-cgw-vpc-one",
            "google_compute_network.vpc_three"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "controller",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-11-27T10:57:05.968-08:00",
            "fingerprint": "rdl7JNrsj5E=",
            "gateway_address": "10.2.1.1",
            "id": "projects/multicloud-kubernetes/regions/us-east1/subnetworks/dlos-development-controller",
            "ip_cidr_range": "10.2.1.0/24",
            "name": "dlos-development-controller",
            "network": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
            "private_ip_google_access": false,
            "project": "multicloud-kubernetes",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/subnetworks/dlos-development-controller"
          },
          "depends_on": [
            "google_compute_network.vpc_three"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "worker",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-11-27T10:57:05.823-08:00",
            "fingerprint": "sTrmpPYU0-E=",
            "gateway_address": "10.2.2.1",
            "id": "projects/multicloud-kubernetes/regions/us-east1/subnetworks/dlos-development-worker",
            "ip_cidr_range": "10.2.2.0/24",
            "name": "dlos-development-worker",
            "network": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
            "private_ip_google_access": false,
            "project": "multicloud-kubernetes",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/subnetworks/dlos-development-worker"
          },
          "depends_on": [
            "google_compute_network.vpc_three"
          ]
        }
      ]
    }
  ]
}